--- a/geradores_tnpb/geradores.ipynb
+++ b/geradores_tnpb/geradores.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,19 +413,20 @@
     "    cpfs_selecionados = []\n",
     "    with open('cpfs.txt', 'r') as r_f:\n",
     "        cpfs_selecionados = r_f.readlines()\n",
-    "    cpfs_selecionados = rnd.sample(cpfs_selecionados, 250)\n",
+    "    rnd.shuffle(cpfs_selecionados)\n",
+    "    cpfs_selecionados = rnd.sample(cpfs_selecionados, k=250)\n",
     "    with open('Patrocinador.txt', 'w') as f:\n",
-    "        for i in range(250):\n",
+    "        for j in range(250):\n",
     "            cnpj = ''\n",
     "            for i in range(14):\n",
     "                cnpj += str(rnd.randint(0,9))\n",
-    "            cpf = cpfs_selecionados[i].strip('\\n')\n",
+    "            cpf = cpfs_selecionados[j].strip('\\n')\n",
     "            f.write(f\"{cpf};{cnpj}\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,10 +435,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gerar_contas():\n",
+    "    f = open(\"Usuarios.txt\", \"r\")\n",
+    "    linhas = f.readlines()\n",
+    "    f.close()\n",
+    "    chars = list(range(33,39)) + list(range(48,58)) + list(range(65,91)) + list(range(97,123))\n",
+    "    with open(\"Contas.txt\", \"w\") as f:\n",
+    "        for l in linhas:\n",
+    "            cpf, idade, nome = l.split(';')\n",
+    "            nome = nome.strip(' ').strip('\\n')\n",
+    "            username = nome.lower().replace(' ','_')\n",
+    "            for i in range(3):\n",
+    "                username += str(rnd.randint(0,9))\n",
+    "            password = ''\n",
+    "            for i in range(16):\n",
+    "                password += chr(rnd.choice(chars))\n",
+    "            email = username + '@example.com'\n",
+    "            f.write(f\"{username};{password};{email};{cpf}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gerar_contas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_musicas():\n",
+    "    f = open('Musicas.txt', 'r', encoding=\"utf-8\")\n",
+    "    m_lines = f.readlines()\n",
+    "    f.close()\n",
+    "    f = open('Compositor.txt', 'r')\n",
+    "    c_lines = f.readlines()\n",
+    "    f.close()\n",
+    "    with open('Musica.txt', 'w', encoding='utf-8') as f:\n",
+    "        for t1,cpf in zip(m_lines,c_lines):\n",
+    "            try:\n",
+    "                msc, ano, gen = t1.split(';')\n",
+    "                gen = gen.strip('\\n')\n",
+    "                cpf = cpf.strip('\\n')\n",
+    "                f.write(f\"{msc};{cpf};{gen};{ano}\\n\")\n",
+    "            except ValueError:\n",
+    "                continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gerar_musicas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_seguir():\n",
+    "    f = open('cpfs.txt', 'r')\n",
+    "    cpfs = f.readlines()\n",
+    "    f.close()\n",
+    "    cpfs = [c.strip('\\n') for c in cpfs]\n",
+    "    with open('Seguir.txt', 'w') as f:\n",
+    "        for i in range(3000):\n",
+    "            cpf_1 = rnd.choice(cpfs)\n",
+    "            cpf_2 = cpf_1\n",
+    "            while cpf_1 == cpf_2:\n",
+    "                cpf_2 = rnd.choice(cpfs)\n",
+    "            f.write(f\"{cpf_1};{cpf_2}\\n\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_comparecer():\n",
+    "    f = open('cpfs.txt', 'r')\n",
+    "    cpfs = f.readlines()\n",
+    "    f.close()\n",
+    "    cpfs = [c.strip('\\n') for c in cpfs]\n",
+    "    id_eventos = []\n",
+    "    f = open('Evento.txt', 'r', encoding='UTF-8')\n",
+    "    id_eventos = f.readlines()\n",
+    "    f.close()\n",
+    "    id_eventos = [t.split(',')[0].strip('\\n') for t in id_eventos]\n",
+    "    rnd.shuffle(cpfs)\n",
+    "    with open('Comparecer.txt', 'w') as f:\n",
+    "        for cpf, id in zip(cpfs, id_eventos):\n",
+    "            f.write(f\"{cpf};{id}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gerar_comparecer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_publicacao():\n",
+    "    dummy = \"\"\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque cursus vehicula quam at vulputate. Nunc pulvinar commodo eros ut rutrum. Proin mollis augue sit amet sem vulputate, eget tempor lectus fermentum. Donec eget nisl est. Sed sit amet massa et sapien pharetra tincidunt in at.\"\"\"\n",
+    "\n",
+    "    f = open('Evento.txt', 'r', encoding='UTF-8')\n",
+    "    id_eventos = f.readlines()\n",
+    "    f.close()\n",
+    "    id_eventos = [t.split(',')[0].strip('\\n') for t in id_eventos]\n",
+    "    f = open(\"Patrocinador.txt\", 'r')\n",
+    "    cpfs_pat = f.readlines()\n",
+    "    cpfs_pat = [t.split(';')[0].strip('\\n') for t in cpfs_pat]\n",
+    "    f.close()\n",
+    "    datas = []\n",
+    "    for i in range(250):\n",
+    "        dia = rnd.randint(1,31)\n",
+    "        mes = rnd.randint(1, 12)\n",
+    "        ano = rnd.randint(2010,2022)\n",
+    "        datas.append(f\"{dia:02d}/{mes:02d}/{ano}\")\n",
+    "    with open('Publicar.txt', 'w') as f:\n",
+    "        for cpf, id, data in zip(cpfs_pat, id_eventos, datas):\n",
+    "            f.write(f\"{cpf};{id};{data};{dummy}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gerar_publicacao()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_reagir():\n",
+    "    f = open('cpfs.txt', 'r')\n",
+    "    cpfs = f.readlines()\n",
+    "    f.close()\n",
+    "    cpfs = [c.strip('\\n') for c in cpfs]\n",
+    "    f = open('Publicar.txt', 'r')\n",
+    "    publis = f.readlines()\n",
+    "    f.close()\n",
+    "    with open(\"Reagir.txt\", 'w') as f:\n",
+    "        for t in publis:\n",
+    "            cpf_pat, id_ev, data_ev, _ = t.split(\";\")\n",
+    "            n_reac = rnd.randint(10,30)\n",
+    "            cpfs_reac = rnd.sample(cpfs, k=n_reac)\n",
+    "            for cpf_r in cpfs_reac:\n",
+    "                f.write(f'{cpf_r};{cpf_pat};{id_ev};{data_ev}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gerar_reagir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_apresentar():\n",
+    "    f = open('Evento.txt', 'r', encoding='UTF-8')\n",
+    "    id_eventos = f.readlines()\n",
+    "    f.close()\n",
+    "    id_eventos = [t.split(',')[0].strip('\\n') for t in id_eventos]\n",
+    "    f = open('Musico.txt', 'r')\n",
+    "    cpfs_musicos = f.readlines()\n",
+    "    cpfs_musicos = [t.split(';')[0] for t in cpfs_musicos]\n",
+    "    f.close()\n",
+    "    f = open('Musica.txt', 'r', encoding='utf-8')\n",
+    "    lines = f.readlines()\n",
+    "    f.close()\n",
+    "    \n",
+    "    with open('Apresentar', 'w') as f:\n",
+    "        for l in lines:\n",
+    "            nome_musica, cpf_comp, _, _ = l.split(';')\n",
+    "            cpf, ev = rnd.choice(cpfs_musicos), rnd.choice(id_eventos)\n",
+    "            f.write(f'{cpf};{ev};{nome_musica};{cpf_comp}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gerar_apresentar()"
+   ]
   }
  ],
  "metadata": {
